@@ -1,6 +1,6 @@
 Package: car
 Version: 3.1-3
-Date: 2024-07-26
+Date: 2024-09-19
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
@@ -38,6 +38,6 @@ Description:
   Functions to Accompany J. Fox and S. Weisberg, 
   An R Companion to Applied Regression, Third Edition, Sage, 2019.
 License: GPL (>= 2)
-URL: https://r-forge.r-project.org/projects/car/, https://CRAN.R-project.org/package=car, https://socialsciences.mcmaster.ca/jfox/Books/Companion/index.html
+URL: https://r-forge.r-project.org/projects/car/, https://CRAN.R-project.org/package=car, https://www.john-fox.ca/Companion/index.html
 VignetteBuilder: knitr
 
