@@ -5,26 +5,26 @@
 #                 download a file if file=filename
 #                 download a script file if script = chap-num
 #  Add more to carWeb including cheat sheets
-# 2/21/2018 deleted "ethics" from the deafulat for page
+# 2/21/2018 deleted "ethics" from the default for page
 # 2018-04-25: J. Fox. Update website URLs; update setup files
 # 2018-04-28: J. Fox. Check whether file exists before overwriting
-
+# 2024-09-19: J. Fox. Update URLs.
 
 carWeb <-
 function (page = c("webpage", "errata", "taskviews"), script, data, setup)
 {
-    rstudiocheat <- "https://www.rstudio.com/resources/cheatsheets/"
-    ide.cheat <- "https://www.rstudio.com/wp-content/uploads/2016/01/rstudio-IDE-cheatsheet.pdf"
-    data.page <- "https://socialsciences.mcmaster.ca/jfox/Books/Companion/data/"
-    setup.dir <- "https://socialsciences.mcmaster.ca/jfox/Books/Companion/setup/"
+    rstudiocheat <- "https://posit.co/resources/cheatsheets/"
+    ide.cheat <- "https://rstudio.github.io/cheatsheets/contributed-cheatsheets.html"
+    data.page <- "https://www.john-fox.ca/Companion/scripts/data/"
+    setup.dir <- "https://www.john-fox.ca/Companion/scripts/files/"
     files <- c("Duncan.txt", "Duncan.csv", "Duncan.xlsx", "Duncan.Rmd", "Hamlet.txt", "RMarkdownTest.Rmd", 
                "zipmod.R", "zipmodBugged.R", "zipmod-generic.R", paste0("chap-", 1:10, ".R"))
-    script.page <- "https://socialsciences.mcmaster.ca/jfox/Books/Companion/scripts/"
-    ethics <- "http://www.amstat.org/asa/files/pdfs/EthicalGuidelines.pdf"
+    script.page <- "https://www.john-fox.ca/Companion/scripts/"
+    ethics <- "https://www.amstat.org/asa/files/pdfs/EthicalGuidelines.pdf"
     page = match.arg(page)
-    urls = c(webpage = "https://socialsciences.mcmaster.ca/jfox/Books/Companion/",
-        errata = "https://socialsciences.mcmaster.ca/jfox/Books/Companion/errata.html",
-        taskviews = "http://cran.r-project.org/web/views",
+    urls = c(webpage = "https://www.john-fox.ca/Companion/",
+        errata = "https://www.john-fox.ca/Companion/errata.pdf",
+        taskviews = "https://cran.r-project.org/web/views/",
         ethics = ethics)
     url <- urls[page]
     if(!missing(data)) {
