@@ -7,5 +7,5 @@ bibentry(bibtype = "Book",
   year         = "2019",
   publisher    = "Sage",
   address      = "Thousand Oaks {CA}",
-  url          = "https://socialsciences.mcmaster.ca/jfox/Books/Companion/",
+  url          = "https://www.john-fox.ca/Companion/",
 )
